# v6-glm-py

./: .copier-answers.yml  .dockerignore  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml  release.yml
docs/: README.md  conf.py  index.rst
docs/v6-glm-py/: implementation.rst  privacy.rst  references.rst  usage.rst  validation.rst
test/: a.csv  conftest.py  test.py
test/binomial/: a.csv  b.csv  c.csv
test/gaussian/: a.csv  b.csv  c.csv
test/poisson/: b.csv  c.csv
test/survival/: a.csv  b.csv  c.csv
v6-glm-py/: __init__.py  central.py  common.py  constants.py  partial.py  partial_betas.py  partial_categorical_levels.py  partial_deviance.py
